finished websocket and orther function

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,9 +17,9 @@ spring.jpa.show-sql=true
 #spring.security.oauth2.client.registration.google.client-secret=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
 #spring.security.oauth2.client.registration.google.scope=email,profile,openid
 
-spring.security.oauth2.client.registration.facebook.client-id=200780338872486
-spring.security.oauth2.client.registration.facebook.client-secret=6ca6280defb6ede53cad5942261dd351
-spring.security.oauth2.client.registration.facebook.scope=email,public_profile
+#spring.security.oauth2.client.registration.facebook.client-id=200780338872486
+#spring.security.oauth2.client.registration.facebook.client-secret=6ca6280defb6ede53cad5942261dd351
+#spring.security.oauth2.client.registration.facebook.scope=email,public_profile
 
 server.servlet.session.timeout=30
 
